<resources>
    <string name="app_name">MADClass2021</string>

    <string name="login_inst">Please provide your email address to the MAD Server.</string>
    <string name="email_hint">E-mail Address</string>
    <string name="submit_email">Submit email</string>
    <string name="email_error">Cannot identify e-mail %1$s </string>

    <string name="jukebox_menu">Jukebox</string>
    <string name="artist">Artist</string>
    <string name="title">Title</string>
    <string name="no_song">No Song</string>
    <string name="URL">URL</string>

<!--    <string name="requesting">Requesting song from CTower</string>-->
    <string name="stopped">Stopped</string>
    <string name="playing">Playing</string>

    <string name="play_song">Play song</string>
    <string name="pause_song">Pause song</string>
    <string name="stream_song">Stream song</string>

</resources>