<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JukeboxActivity"
    android:background="@drawable/marble_background"
    android:backgroundTint="#80FFFFFF"
    android:backgroundTintMode="src_over">

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="200dp"
        android:orientation="vertical"
        android:padding="5dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/artist_label"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/artist"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/song_artist"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no_song" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/title_label"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/song_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no_song" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/url_title"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/URL"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/song_url"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no_song" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:text="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageButton
                android:id="@+id/btn_play"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/play_song"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/play_button" />

            <ImageButton
                android:id="@+id/btn_pause"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/pause_song"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/pause_button" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/btn_request"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/stream_song"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/streaming" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>